[tool.poetry]
name = "B3 Tracker"
version = "0.1.0"
description = ""
authors = ["SkanderBM <skander.bmahmoud@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
beautifulsoup4 = "^4.12.2"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
